Closes #105